# mdrOS

./: .gitignore  CMakeLists.txt  README.md
include/Cmake/: linux.cmake  macos.cmake
include/arch/x86_64/: E820.h
include/kernel/: kmem.h  vga.h
scripts/: createx64iso.c  createx64iso_linux.sh  createx64iso_mac.sh
src/arch/x86_64/: init.c  vga.c
src/arch/x86_64/boot/stage1/: CMakeLists.txt  stage1.asm
src/arch/x86_64/boot/stage2/: CMakeLists.txt  bootloader.c  disk.c  ext2.c  memory.c  serial.c  stage2_entry.asm  stage2_entry.s
src/arch/x86_64/boot/stage2/include/: bootloader.h  disk.h  ext2.h  memory.h  serial.h
targets/x86_64/: bootloader_linker.ld  linker.ld
